--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_URL="https://aditya-rokade.vercel.app/api/v1"
+REACT_APP_BASE_URL="https://aditya-rokade.vercel.app"
 
 # REACT_APP_BASE_URL="http://localhost:3000/api/v1"
